# wpm

./: .gitignore  404.html  Cargo.toml  README.md  deny.toml  dependencies.json  example.html  index.html  installation.html  justfile  mkdocs.yml  schema.unit.json  shell.nix  tutorial.html
.github/workflows/: windows.yaml
cli/: log.html  rebuild.html  reload.html  reset.html  restart.html  start.html  state.html  status.html  stop.html  units.html
docs/: example.md  index.md  installation.md  tutorial.md
docs/cli/: log.md  rebuild.md  reload.md  reset.md  restart.md  start.md  state.md  status.md  stop.md  units.md
examples/: desktop.toml  kanata.toml  komorebi-bar.toml  komorebi.toml  masir.toml  whkd.toml
examples/json/: desktop.json  kanata.json  komokana.json  komorebi-bar.json  komorebi.json  masir.json  mousemaster.json  whkd.json
examples/toml/: desktop.toml  kanata.toml  komokana.toml  komorebi-bar.toml  komorebi.toml  masir.toml  mousemaster.toml  whkd.toml
search/: search_index.json
wix/: main.wxs
wpm/: Cargo.toml
wpm/src/: communication.rs  generators.rs  lib.rs  process_manager.rs  process_manager_status.rs  unit.rs  unit_status.rs
wpmc/: Cargo.toml
wpmc/src/: lib.rs
wpmctl/: Cargo.toml
wpmctl/src/: main.rs
wpmd/: Cargo.toml
wpmd/src/: main.rs  process_manager.rs  unit.rs
