[workspace]

resolver = "2"
members = [
    "wpm",
    "wpmctl",
    "wpmd"
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dirs = "5"
interprocess = { version = "2" }
parking_lot = "0.12"
serde = { version = "1",  features = ["derive"]}
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
