[workspace]

resolver = "2"
members = [
    "wpm",
    "wpmctl",
    "wpmd"
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dirs = "6"
interprocess = { version = "2" }
parking_lot = "0.12"
serde = { version = "1",  features = ["derive"]}
serde_json = "1"
serde_any = "0.5"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", rev = "6ddf3fe1f6b1f60aaaabf15a3b5608ba6dc5278b"}
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
