[package]
name = "wpm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
interprocess = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-envfile = "0.2"
shared_child = "1"
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
url = { version = "2", features = ["serde"] }
sha256 = "1"

schemars = { version = "0.8", features = ["url"] }
tabled = { version = "0.19", features = ["derive"] }
toml = "0.8"
