[package]
name = "wpmctl"
version = "0.1.0"
edition = "2021"

[dependencies]
wpm = { path = "../wpm" }

chrono = { workspace = true }
clap = { workspace = true }
fs-tail = "0.1"
interprocess = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
