[package]
name = "wpmd"
version = "0.1.0"
edition = "2021"

[dependencies]
wpmc = { path = "../wpmc" }

color-eyre = { workspace = true }
dirs = { workspace = true }
interprocess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ctrlc = "3"
toml = "0.8"
