[package]
name = "wpmd"
version = "0.1.0"
edition = "2021"

[dependencies]
wpm = { path = "../wpm" }

color-eyre = { workspace = true }
interprocess = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tracing-appender = "0.2"
ctrlc = "3"
